--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <script src="./reverseString.js" defer></script>
+  <script type="module" src="./calculator.test.js" defer></script>
 </head>
 <body>
   
